Compiling the plugins as modules (files to be dlopened by the simulator). The modules will be installed below $(exec_prefix)/lib/rcssserver3D/ . The package has to be compiled using shared libraries to get this working. To be fully portable, the simulator should not open the .so files directly but rather use the .la files created by libtool to find the proper library (see libtool manual).  However, for linux opening the .so files should be OK.
To run the simulator, the LD_LIBRARY_PATH environment variable should contain
the directory where the plugins can be found.

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -1,9 +1,11 @@
-SUBDIRS = filesystemrar \
+SUBDIRS = \
 	  filesystemstd \
 	  filesystemzip \
 	  inputsdl \
-	  soundsystembass \
-	  soundsystemfmod \
 	  survival
 
 EXTRA_DIST = plugin.dsw
+
+# filesystemrar 
+# soundsystembass
+# soundsystemfmod 
