Compiling the plugins as modules (files to 	be dlopened by the simulator).  The modules will be installed 	below $(exec_prefix)/lib/rcssserver3D/ .  The package has to be 	compiled using shared libraries to get this working. To be fully 	portable, the simulator should not open the .so files directly but 	rather use the .la files created by libtool to find the proper 	library 	(see libtool manual).  However, for linux opening the .so files should be OK.
	To run the simulator, the LD_LIBRARY_PATH environment variable
	should contain the directory where the plugins can be found.

--- a/plugin/survival/Makefile.am
+++ b/plugin/survival/Makefile.am
@@ -1,22 +1,24 @@
-lib_LTLIBRARIES = libsurvival.la
+pkglib_LTLIBRARIES = survival.la
+
+survival_la_SOURCES = \
+export.cpp \
+linesegmentperceptor.cpp \
+linesegmentperceptor.h \
+linesegmentperceptor_c.cpp \
+survivalagentaspect.cpp \
+survivalagentaspect.h \
+survivalagentaspect_c.cpp \
+survivalcontrolaspect.cpp \
+survivalcontrolaspect.h \
+survivalcontrolaspect_c.cpp
+
+EXTRA_DIST = survival.dsp survival.rb 
+
+# -module tells automake we're not building a library but a loadable module
+# so we don't need the "lib" prefix in the module name
+survival_la_LDFLAGS = -module -version-info 0:0:0
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
-libpkgincludedir = $(includedir)/@PACKAGE@/survival
-
-EXTRA_DIST = survival.dsp survival.rb 
-
-libsurvival_la_SOURCES = \
-export.cpp \
-linesegmentperceptor.cpp \
-linesegmentperceptor_c.cpp \
-survivalagentaspect.cpp \
-survivalagentaspect_c.cpp \
-survivalcontrolaspect.cpp \
-survivalcontrolaspect_c.cpp
-
-nobase_libpkginclude_HEADERS = \
-linesegmentperceptor.h \
-survivalagentaspect.h \
-survivalcontrolaspect.h
+# libpkgincludedir = $(includedir)/@PACKAGE@/survival
