*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ app/zeitgeisttest/.libs
 app/zeitgeisttest/Makefile
 app/zeitgeisttest/Makefile.in
 app/zeitgeisttest/zeitgeisttest
+config.aux/compile
 config.aux/config.guess
 config.aux/config.sub
 config.aux/depcomp
@@ -152,18 +153,42 @@ lib/zeitgeist/telnetserver/.deps
 lib/zeitgeist/telnetserver/.dirstamp
 plugin/Makefile
 plugin/Makefile.in
+plugin/filesystemrar/.deps
+plugin/filesystemrar/.libs
 plugin/filesystemrar/Makefile
 plugin/filesystemrar/Makefile.in
+plugin/filesystemrar/*.la
+plugin/filesystemrar/*.lo
+plugin/filesystemstd/.deps
+plugin/filesystemstd/.libs
 plugin/filesystemstd/Makefile
 plugin/filesystemstd/Makefile.in
+plugin/filesystemstd/*.la
+plugin/filesystemstd/*.lo
+plugin/filesystemzip/.deps
+plugin/filesystemzip/.libs
 plugin/filesystemzip/Makefile
 plugin/filesystemzip/Makefile.in
+plugin/filesystemzip/*.la
+plugin/filesystemzip/*.lo
+plugin/inputsdl/.deps
+plugin/inputsdl/.libs
 plugin/inputsdl/Makefile
 plugin/inputsdl/Makefile.in
+plugin/inputsdl/*.la
+plugin/inputsdl/*.lo
+plugin/soundsystembass/.deps
+plugin/soundsystembass/.libs
 plugin/soundsystembass/Makefile
 plugin/soundsystembass/Makefile.in
+plugin/soundsystembass/*.la
+plugin/soundsystembass/*.lo
+plugin/soundsystemfmod/.deps
+plugin/soundsystemfmod/.libs
 plugin/soundsystemfmod/Makefile
 plugin/soundsystemfmod/Makefile.in
+plugin/soundsystemfmod/*.la
+plugin/soundsystemfmod/*.lo
 plugin/survival/.deps
 plugin/survival/.libs
 plugin/survival/Makefile
