- added app/spadestest. A simple console based demonstration of the physics engine to be extended with spades.

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = coretest inputtest scenetest simulator zeitgeisttest 
+SUBDIRS = coretest inputtest scenetest simulator zeitgeisttest spadestest
