- changed the initial file check to use the salt.h header - automake 1.7 or better is required - defining the preprocessor symbol PREFIX dependent on the configure prefix value - moved all check for graphic libraries (like GL, SDL, DevIL, ...) into separate macros.   The basic libraries (libsalt, libzeitgeist, and libkerosin) do not need them, so they should not depend on them.   The macros have gone to acinclude and are only called in configure.ac. If the libraries are not available   on a particular system or if the user configures with --disable-kerosin, libkerosin and the test dependend   on kerosin will not be build. - moved the check for ODE into a separate macro. Removed dependency on libode for the base libraries libsalt and   libzeitgeist. Applications need only to link the .la files from our libraries, other dependencies will be resolved   automatically by libtool. - added the app/fonttest Makefile

--- a/configure.ac
+++ b/configure.ac
@@ -1,15 +1,15 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT([rcssserver3d], 0.1, [sserver-admin@lists.sf.net])
-AC_CONFIG_SRCDIR([plugin/inputsdl/keyboardsdl_c.cpp])
+AC_CONFIG_SRCDIR([lib/salt/salt.h])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_AUX_DIR([config.aux])
 
-AM_INIT_AUTOMAKE([gnu subdir-objects])
+AM_INIT_AUTOMAKE([gnu subdir-objects 1.7])
 AC_LANG([C++])
 AM_ENABLE_SHARED(yes)
 AM_ENABLE_STATIC(no)
 
-AC_DEFINE(PREFIX, /usr/local/share, [Define the install prefix])
+AC_DEFINE_UNQUOTED(PREFIX, $prefix, [Define the install prefix. Needed by the libraries to check for ruby scripts.])
 
 AC_ARG_ENABLE(debug,
      AC_HELP_STRING([--enable-debug], [Turn on debugging (default is YES)]),
@@ -32,38 +32,15 @@ AC_PROG_LIBTOOL
 AC_PROG_AWK
 
 # Checks for libraries.
-AC_CHECK_LIB(slang, SLang_init_all,,break)
 
 # Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS([float.h limits.h malloc.h memory.h stdlib.h string.h])
 
-# check for OpenGL location and used extensions
-AC_CHECK_HEADER([GL/gl.h],,
-  AC_MSG_ERROR([required OpenGL headers not found. Please specify the location 
-of the OpenGL header directory using the CPPFLAGS environment variable]))
-AC_CHECK_HEADERS([GL/glx.h],
-                 AC_SUBST([GLTARGET], [x]),
-		 AC_CHECK_HEADERS([GL/wglext.h],
-                                  AC_SUBST([GLTARGET], [win32]),
-  				  AC_MSG_ERROR([could not find X nor MS Windows GL extensions]),    
-				  [#include <GL/gl.h>]),
-		 [#include <GL/gl.h>])
-
-GLDIR=`echo "#include <GL/gl.h>" | /lib/cpp -M | awk '{ print $2 }'`
-GLDIR=`dirname "$GLDIR"`
-AC_SUBST([GLDIR], [$GLDIR])
-AC_CHECK_FILE([$GLDIR/glx.h])
-
-AC_CHECK_LIB(gllib,glEnable)
 
 AC_CHECK_HEADER([boost/version.hpp],,
   AC_MSG_ERROR([boost library not found. Please specify the location 
 of the boost header directory using the CPPFLAGS environment variable]))
-AC_CHECK_HEADER([SDL/SDL.h],,
-  AC_MSG_ERROR([Simple DirectMedia Layer library not found. Please specify 
-                the location of the SDL header directory using the CPPFLAGS 
-                environment variable]))
 AC_CHECK_HEADERS([hash_map],,
 	AC_MSG_WARN(['hash_map' will be substituted by 'map'. Possible fix: install stlport]))
 
@@ -88,47 +65,10 @@ AC_REPLACE_FUNCS([_vsnprintf])
 AC_CHECK_FUNCS([atexit floor gethostname inet_ntoa memset pow socket sqrt strchr strrchr strstr strupr])
 
 ## checks for system services
-AC_PATH_X
-RCSS_PATH_FREETYPE
+RCSS_BUILD_KEROSIN
+RCSS_BUILD_SOUNDSYSTEMFMOD
 RCSS_PATH_RUBY
-RCSS_CHECK_SOUNDSYSTEMFMOD
-
-AC_ARG_VAR(ODE, [location of ode installation])
-if test $ODE; then
-   CPPFLAGS="$CPPFLAGS -I$ODE/include"
-   LDFLAGS="$LDFLAGS -L$ODE/lib"
-fi
-
-AC_CHECK_HEADERS([ode/ode.h],,[
-        AC_MSG_ERROR([The ode headers (e.g. ode/ode.h) cannot be found. Please specify the location of the ode installtion, by using the ODE environment variable (e.g. ./configure ODE=$HOME/ode-0.03)])])
-
-AC_CHECK_LIB(ode,dWorldCreate,,[
-        AC_MSG_ERROR([The ode library (libode.a) cannot be found. Please specify the location of the ode installtion, by using the ODE environment variable (e.g. ./configure ODE=$HOME/ode-0.03)])])
-
-AC_ARG_VAR(SDL, [location of SDL installation])
-if test $SDL; then
-   CPPFLAGS="$CPPFLAGS -I$SDL/include"
-   LDFLAGS="$LDFLAGS -L$SDL/lib"
-fi
-
-AC_CHECK_HEADERS([SDL/SDL.h],,[
-        AC_MSG_ERROR([The SDL headers (e.g. SDL/SDL.h) cannot be found. Please specify the location of the SDL installtion, by using the SDL environment variable (e.g. ./configure SDL=$HOME/SDL)])])
-
-AC_CHECK_LIB(SDL, SDL_Init,,[
-        AC_MSG_ERROR([The SDL library (libSDL.a) cannot be found. Please specify the location of the SDL installtion, by using the SDL environment variable (e.g. ./configure SDL=$HOME/SSL)])])
-
-
-AC_ARG_VAR(DEVIL, [location of DevIL installation])
-if test $DEVIL; then
-   CPPFLAGS="$CPPFLAGS -I$DEVIL/include"
-   LDFLAGS="$LDFLAGS -L$DEVIL/lib"
-fi
-
-AC_CHECK_HEADERS([IL/il.h],,[
-        AC_MSG_ERROR([The DevIL headers (e.g. IL/il.h) cannot be found. Please specify the location of the DevIL installtion, by using the DEVIL environment variable (e.g. ./configure DEVIL=$HOME/DevIL)])])
-
-#AC_CHECK_LIB(IL,ilInit,,[
-#        AC_MSG_ERROR([The DevIL library (libIL.la) cannot be found. Please specify the location of the DevIL installtion, by using the DEVIL environment variable (e.g. ./configure DEVIL=$HOME/DevIL)])])
+RCSS_CHECK_ODE
 
 # create Makefiles and other configuration files
 AC_CONFIG_FILES([Makefile \
@@ -151,6 +91,7 @@ AC_CONFIG_FILES([Makefile \
 		 plugin/survival/Makefile \
 		 app/Makefile \
 		 app/coretest/Makefile \
+		 app/fonttest/Makefile \
 		 app/inputtest/Makefile \
 		 app/scenetest/Makefile \
 		 app/simulator/Makefile \
