--- a/lib/zeitgeist/Makefile.am
+++ b/lib/zeitgeist/Makefile.am
@@ -2,10 +2,12 @@ if DEBUG
 pkglib_LTLIBRARIES = libzeitgeist_debug.la
 libzeitgeist_debug_la_SOURCES = $(sources)
 libzeitgeist_debug_la_CXXFLAGS = -O -g -W -Wall
+libzeitgeist_debug_la_LIBADD = @RUBY_LDFLAGS@ @RUBY_LDADD@
 else
 pkglib_LTLIBRARIES = libzeitgeist.la 
 libzeitgeist_la_SOURCES = $(sources)
 libzeitgeist_la_CXXFLAGS = -O2
+libzeitgeist_la_LIBADD = @RUBY_LDFLAGS@ @RUBY_LDADD@
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @RUBY_CPPFLAGS@
