- changed Makefile.am's so that parts dependend on libkerosin can be build   optionally. - removed dependencies to external libraries as these are covered with   our simulator libraries.

--- a/app/inputtest/Makefile.am
+++ b/app/inputtest/Makefile.am
@@ -1,4 +1,6 @@
+if BUILD_KEROSIN
 noinst_PROGRAMS = inputtest
+endif
 
 all-local:
 	mkdir -p ${srcdir}/sys/script/
@@ -11,23 +13,18 @@ LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	-lIL -lGL -lruby @RUBY_LDADD@ \
-	${top_srcdir}/utility/libobj/liblibobject.la
+        ${top_srcdir}/lib/salt/libsalt_debug.la 
 inputtest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	-lIL -lGL -lruby @RUBY_LDADD@ \
-	${top_srcdir}/utility/libobj/liblibobject.la
+        ${top_srcdir}/lib/salt/libsalt.la 
 inputtest_CXXFLAGS = -O2
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
-AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 inputtest_SOURCES = main.cpp
 EXTRA_DIST = inputtest.rb zeitgeist.rb
