--- a/plugin/soundsystemfmod/Makefile.am
+++ b/plugin/soundsystemfmod/Makefile.am
@@ -1,9 +1,11 @@
 # Building the soundsystem plugin is optional and dependent on an
 # existing fmod installation
 
+if BUILD_KEROSIN
 if BUILD_SOUNDSYSTEMFMOD
-
 pkglib_LTLIBRARIES = soundsystemfmod.la
+endif
+endif
 
 soundsystemfmod_la_LIBADD = -lfmod
 
@@ -24,4 +26,3 @@ soundsystemfmod_la_LDFLAGS = -module -version-info 0:0:0
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @RUBY_CPPFLAGS@
 
-endif
