--- a/app/coretest/Makefile.am
+++ b/app/coretest/Makefile.am
@@ -1,33 +1,23 @@
+if BUILD_KEROSIN
 noinst_PROGRAMS = coretest
-
-all-local:
-	mkdir -p ${srcdir}/sys/script/
-	rm -f ${srcdir}/sys/script/*.rb
-	cd ${srcdir}/sys/script/ && \
-	${LN_S} ../../*.rb .
+endif
 
 if DEBUG
 LDADD = \
-	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	-lIL -lGL -lruby @RUBY_LDADD@ \
-	${top_srcdir}/utility/libobj/liblibobject.la
+        ${top_srcdir}/lib/salt/libsalt_debug.la 
 coretest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
-	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	-lIL -lGL -lruby @RUBY_LDADD@ \
-	${top_srcdir}/utility/libobj/liblibobject.la
+        ${top_srcdir}/lib/salt/libsalt.la 
 coretest_CXXFLAGS = -O2
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
-AM_LDFLAGS  = @RUBY_LDFLAGS@
 
-coretest_SOURCES = main.cpp
-EXTRA_DIST = coretest.rb zeitgeist.rb
+coretest_SOURCES = main.cpp 
+
+
