--- a/app/scenetest/Makefile.am
+++ b/app/scenetest/Makefile.am
@@ -1,4 +1,6 @@
+if BUILD_KEROSIN
 noinst_PROGRAMS = scenetest
+endif
 
 all-local:
 	mkdir -p ${srcdir}/sys/
@@ -11,23 +13,18 @@ LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	-lIL -lGL -lruby @RUBY_LDADD@ \
-	${top_srcdir}/utility/libobj/liblibobject.la
+        ${top_srcdir}/lib/salt/libsalt_debug.la 
 scenetest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	-lIL -lGL -lruby @RUBY_LDADD@ \
-	${top_srcdir}/utility/libobj/liblibobject.la
+        ${top_srcdir}/lib/salt/libsalt.la 
 scenetest_CXXFLAGS = -O2
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
-AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 scenetest_SOURCES = main.cpp \
 md5mesh.cpp md5mesh.h md5mesh_c.cpp 
