- added missing gpl headers

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -2,7 +2,8 @@ SUBDIRS = \
 	  filesystemstd \
 	  filesystemzip \
 	  inputsdl \
-	  survival
+	  survival \
+	  monitortest	
 
 EXTRA_DIST = plugin.dsw
 
