- initial monitor system added

--- a/configure.ac
+++ b/configure.ac
@@ -119,6 +119,7 @@ AC_CONFIG_FILES([Makefile \
 		 plugin/soundsystembass/Makefile \
 		 plugin/soundsystemfmod/Makefile \
 		 plugin/survival/Makefile \
+		 plugin/monitortest/Makefile \
 		 app/Makefile \
 		 app/coretest/Makefile \
 		 app/fonttest/Makefile \
