*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -122,18 +122,27 @@ lib/oxygen/liboxygen*.la
 lib/oxygen/agentaspect/*.lo
 lib/oxygen/agentaspect/.deps
 lib/oxygen/agentaspect/.dirstamp
+lib/oxygen/agentaspect/.libs
 lib/oxygen/controlaspect/*.lo
 lib/oxygen/controlaspect/.deps
 lib/oxygen/controlaspect/.dirstamp
+lib/oxygen/controlaspect/.libs
+lib/oxygen/monitorserver/.deps
+lib/oxygen/monitorserver/.dirstamp
+lib/oxygen/monitorserver/.libs
+lib/oxygen/monitorserver/*.lo
 lib/oxygen/physicsserver/*.lo
 lib/oxygen/physicsserver/.deps
 lib/oxygen/physicsserver/.dirstamp
+lib/oxygen/physicsserver/.libs
 lib/oxygen/sceneserver/*.lo
 lib/oxygen/sceneserver/.deps
 lib/oxygen/sceneserver/.dirstamp
+lib/oxygen/sceneserver/.libs
+lib/oxygen/spadesserver/*.lo
 lib/oxygen/spadesserver/.deps
 lib/oxygen/spadesserver/.dirstamp
-lib/oxygen/spadesserver/*.lo
+lib/oxygen/spadesserver/.libs
 lib/salt/.deps
 lib/salt/.libs
 lib/salt/Makefile.in
