added .libs/ directory to .cvsignore files where necessary

--- a/.gitignore
+++ b/.gitignore
@@ -84,35 +84,45 @@ lib/kerosin/agentaspect/.dirstamp
 lib/kerosin/fontserver/*.lo
 lib/kerosin/fontserver/.deps
 lib/kerosin/fontserver/.dirstamp
+lib/kerosin/fontserver/.libs
 lib/kerosin/imageserver/*.lo
 lib/kerosin/imageserver/.deps
 lib/kerosin/imageserver/.dirstamp
+lib/kerosin/imageserver/.libs
 lib/kerosin/inputserver/*.lo
 lib/kerosin/inputserver/.deps
 lib/kerosin/inputserver/.dirstamp
+lib/kerosin/inputserver/.libs
 lib/kerosin/materialserver/*.lo
 lib/kerosin/materialserver/.deps
 lib/kerosin/materialserver/.dirstamp
+lib/kerosin/materialserver/.libs
 lib/kerosin/openglserver/*.lo
 lib/kerosin/openglserver/.deps
 lib/kerosin/openglserver/.dirstamp
+lib/kerosin/openglserver/.libs
 lib/kerosin/openglserver/glextensionreg.cpp
 lib/kerosin/openglserver/glextensionreg.h
 lib/kerosin/renderserver/*.lo
 lib/kerosin/renderserver/.deps
 lib/kerosin/renderserver/.dirstamp
+lib/kerosin/renderserver/.libs
 lib/kerosin/sceneserver/*.lo
 lib/kerosin/sceneserver/.deps
 lib/kerosin/sceneserver/.dirstamp
+lib/kerosin/sceneserver/.libs
 lib/kerosin/sceneserver/helper/*.lo
 lib/kerosin/sceneserver/helper/.deps
 lib/kerosin/sceneserver/helper/.dirstamp
+lib/kerosin/sceneserver/helper/.libs
 lib/kerosin/soundserver/*.lo
 lib/kerosin/soundserver/.deps
 lib/kerosin/soundserver/.dirstamp
+lib/kerosin/soundserver/.libs
 lib/kerosin/textureserver/*.lo
 lib/kerosin/textureserver/.deps
 lib/kerosin/textureserver/.dirstamp
+lib/kerosin/textureserver/.libs
 lib/oxygen/*.lo
 lib/oxygen/.deps
 lib/oxygen/.libs
