changes due to demo files inside repository

--- a/app/fonttest/Makefile.am
+++ b/app/fonttest/Makefile.am
@@ -1,5 +1,6 @@
 if BUILD_KEROSIN
 noinst_PROGRAMS = fonttest
+all-local: data/font/VeraMono.ttf
 endif
 
 if DEBUG
@@ -22,4 +23,10 @@ AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 fonttest_SOURCES = main.cpp 
 
+EXTRA_DIST = \
+data/font/VeraMono.ttf.gz \
+data/image/jpg.jpg 
 
+
+data/font/VeraMono.ttf: data/font/VeraMono.ttf.gz
+	gunzip -c data/font/VeraMono.ttf.gz > data/font/VeraMono.ttf
