included agentdb.list into distribution

--- a/app/spadestest/Makefile.am
+++ b/app/spadestest/Makefile.am
@@ -18,5 +18,5 @@ AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 spadestest_SOURCES = main.cpp
-EXTRA_DIST = spadestest.rb 
+EXTRA_DIST = spadestest.rb agentdb.list
 
